Fixing background image not looking correct on mobile (via some disgusting javascript hacks on startup)

--- a/css/video-test.css
+++ b/css/video-test.css
@@ -167,8 +167,10 @@ html, body {
 		position: absolute;
 		top: 0px;
 		z-index: -1;
-		height: auto;
+	}
+
+	#video-replacement img {
 		width: 100%;
-		overflow: hidden;
+		height: auto;
 	}
 }
